# brdr

./: .flake8  .gitignore  .python-version  CHANGES.md  CITATION.cff  LICENSE  README.md  REFACTORING_SUMMARY.md  examples.html  fix.md  getting-started.html  index.html  listings.json  metadata_performance.md  parameter-cookbook.html  processor-selection.html  pyproject.toml  qa.html  requirements-dev.txt  requirements.txt  search.json  test_performance_demo.py
.github/workflows/: publish.yml  python-package.yml
brdr/: __init__.py  aligner.py  aligner_config.py  aligner_core.py  aligner_exporter.py  aligner_processor.py  aligner_refactored.py  auto_referencer.py  configs.py  constants.py  enums.py  evaluator.py  feature_data.py  geometry_utils.py  graph_utils.py  grb.py  loader.py  logger.py  metadata.py  migration_guide.py  oe.py  osm.py  predictor.py  processor.py  topo.py  topo_utils.py  typings.py  utils.py  viz.py
brdr/be/: be.py  constants.py
brdr/loaders/: be.py  grb.py  nl.py
brdr/nl/: constants.py  enums.py  loader.py
brdr/osm/: constants.py  loader.py
docker/: Dockerfile  body.json  body_example.json  body_example_big.json  body_without_metadata.json  build.sh  example_call.py  grb_webservice.py  grb_webservice_pyramid.py  grb_webservice_typings.py  start.sh
docs/: .gitignore  _quarto.yml  _quarto_internal_scss_error.scss  example_readme.py  examples.qmd  getting-started.qmd  index.qmd  parameter-cookbook.qmd  processor-selection.qmd  qa.qmd
docs/_site/: index.html  search.json
docs/examples/: _metadata.yml  _quarto_internal_scss_error.scss  example_animation.qmd  example_compare_to_reference_de9im.qmd  example_custom_evaluator_strategy.qmd  example_custom_predictor_strategy.qmd  example_dictloader.qmd  example_evaluate.qmd  example_geodataframeloader_geopandas_workflow.qmd  example_geojsonloader.qmd  example_lambert72_to_lambert08.html  example_lambert72_to_lambert08.qmd  example_loader.qmd  example_networkgeometryprocessor.qmd  example_opendomain_network_polygon_reference.qmd  example_opendomain_snap_polygon_reference.qmd  example_predict.qmd  example_readme.qmd
docs/reference/: Aligner.qmd  DictLoader.qmd  GeoJsonFileLoader.qmd  GeoJsonLoader.qmd  GeoJsonUrlLoader.qmd  Loader.qmd  _sidebar.yml  aligner.Aligner.qmd  index.qmd
docs/static/: custom.scss
docs_src/: _quarto.yml  objects.json
examples/: __init__.py  as.gpkg  example osmnx.py  example_131635.py  example_align_line_to_grb.py  example_align_point_to_grb.py  example_aligner.py  example_aligner_interference.py  example_aligner_interference_linestring.py  example_aligners.py  example_animated_gif.py  example_animation.html  example_ao.py  example_autoreferencer.py  example_brkloader_netherlands.py  example_brkloader_netherlands_wfs.py  example_cadastralloader_belgium.py  example_cadastralloader_belgium_wfs.py  example_centerline.py  example_combined_borders_adp_gbg.py  example_compare_to_reference_de9im.py  example_custom_evaluator_strategy.py  example_custom_predictor_strategy.py  example_dictloader.html  example_dictloader.py  example_dictloader_properties.py  example_diff.py  example_eo.py  example_evaluate.html  example_evaluate.py  example_evaluate_ao.py  example_evaluate_multi_to_single.py  example_evaluate_with_observation.py  example_evaluate_without_formula.py  example_evaluate_without_formula2.py  example_evaluate_without_observation.py  example_geodataframeloader_geopandas_workflow.py  example_geojsonloader.html  example_geojsonloader.py  example_geometrycollection_to_polygon.py  (+84 more)
examples/input/: one.geojson  one_simple.geojson  predictor_one.geojson  themelayer.geojson  topo_parcels.geojson  two.geojson
output/: processresults_result.geojson  processresults_result_relevant_diff.geojson  processresults_result_relevant_intersection.geojson
plugin/: autocorrectborders.py  autocorrectborders_guide.docx  readme.txt
reference/: Aligner.html  AlignerConfig.html  AlignerFeature.html  AlignerFeatureCollection.html  AlignerGeometryProcessor.html  AlignerInputType.html  AlignerResult.html  AlignerResultType.html  BaseProcessor.html  DictLoader.html  DieussaertGeometryProcessor.html  DiffMetric.html  Evaluation.html  FullReferenceStrategy.html  GeoDataFrameLoader.html  GeoJsonFileLoader.html  GeoJsonLoader.html  GeoJsonUrlLoader.html  Loader.html  NetworkGeometryProcessor.html  OGCFeatureAPIReferenceLoader.html  OpenDomainStrategy.html  PredictionStrategy.html  ProcessRemark.html  ProcessResult.html  ProcessorConfig.html  ProcessorID.html  SnapGeometryProcessor.html  SnapStrategy.html  TopologyProcessor.html  WFSReferenceLoader.html  animated_map.html  enums.GRBType.html  grb.update_featurecollection_to_actual_grb.html  index.html  loader.GRBActualLoader.html  loader.GRBFiscalParcelLoader.html  loader.GRBSpecificDateParcelLoader.html  loader.OSMLoader.html  plot_difference_by_relevant_distance.html  (+4 more)
site_libs/bootstrap/: bootstrap-4fb5ef05a860c8bf409e4f2b79d95a28.min.css  bootstrap-647d8e5d48f161d82fb67c248fc99386.min.css  bootstrap-66637f7aac715e5a0db970eb374460cc.min.css  bootstrap-b79b1fcb1424b07627426b9f3ef330b1.min.css  bootstrap-c486645d622c0aedd0f266be6bc4df2a.min.css
tests/: conftest.py  test_aligner.py  test_aligner_refactored.py  test_autoreferencer.py  test_be.py  test_clean_snap_strategy.py  test_coverage_gaps.py  test_evaluate.py  test_examples.py  test_feedback.py  test_geometry_utils.py  test_grb.py  test_integration.py  test_loader.py  test_metadata.py  test_metadata_performance.py  test_network_cleanup.py  test_oe.py  test_osm.py  test_predict.py  test_predictor.py  test_processor.py  test_refinement.py  test_snap.py  test_topology.py  test_utils.py  test_version.py
tests/testdata/: be_cadastral.xml  grb_wfs_capabilities.xml  haspengouw.geojson  input_data.py  multipolygon.geojson  reference.geojson  result.geojson  result_diff.geojson  result_diff_min.geojson  result_diff_plus.geojson  test_parcel_vs_building.geojson  test_wanted_changes.geojson  theme.geojson  theme2.geojson  theme3.geojson  theme_area_80000.geojson  theme_changetest.geojson  zwin.geojson  (+2 more)
(+26 files in other folders)
