[project]
name = "brdr"
version = "0.3.0"
description = "BRDR - a Python library to assist in realigning (multi-)polygons (OGC Simple Features) to reference borders "
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Karel Dieussaert", email = "karel.dieussaert@vlaanderen.be" },
    { name = "Emrys Roef", email = "emrys.roef@vlaanderen.be" },
]
maintainers = [
    { name = "Emrys Roef", email = "emrys.roef@vlaanderen.be" },
    { name = "Koen Van Daele", email = "koen.vandaele@vlaanderen.be" },
    { name = "Vermeyen Maerten", email = "maarten.vermeyen@vlaanderen.be" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geojson~=3.1",
    "requests~=2.32",
    "shapely~=2.0",
]
[project.urls]
Documentation = "https://github.com/OnroerendErfgoed/brdr/blob/main/README.md"
Repository = "https://github.com/OnroerendErfgoed/brdr"
Issues = "https://github.com/OnroerendErfgoed/brdr/issues"

[project.optional-dependencies]
dev = [
    "black==24.4.0",
    "flake8==7.0.0",
    "geopandas==0.14.3",
    "hatchling==1.24.2",
    "matplotlib==3.8.4",
    "mypy==1.9.0",
    "pip-tools==7.4.1",
    "pytest-cov==5.0.0",
    "pytest==8.1.1",
    "responses==0.25.3",
    "toml==0.10.2",
    "types-requests==2.31.0.20240406",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["brdr"]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']
