[project]
name = "brdr"
version = "0.13.0"
description = "BRDR - a Python library to assist in realigning (multi-)polygons (OGC Simple Features) to reference borders "
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Karel Dieussaert", email = "karel.dieussaert@vlaanderen.be" },
    { name = "Emrys Roef", email = "emrys.roef@vlaanderen.be" },
]
maintainers = [
    { name = "Emrys Roef", email = "emrys.roef@vlaanderen.be" },
    { name = "Koen Van Daele", email = "koen.vandaele@vlaanderen.be" },
    { name = "Vermeyen Maarten", email = "maarten.vermeyen@vlaanderen.be" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geojson~=3.1",
    "requests~=2.32",
    "shapely~=2.0",
    "topojson>=1.10",
    "networkx>=3.3",
    "osmnx~=2.0",
    "geopandas>=1.1"
]
[project.urls]
Documentation = "https://github.com/OnroerendErfgoed/brdr/blob/main/README.md"
Repository = "https://github.com/OnroerendErfgoed/brdr"
Issues = "https://github.com/OnroerendErfgoed/brdr/issues"

[project.optional-dependencies]
test = [
    "pytest-cov==6.0.0",
    "pytest==8.3.3",
    "responses==0.25.3",
    "toml==0.10.2",
]
dev = [
    "brdr[test]",
    "black==25.1.0",
    "flake8==7.1.1",
    "geopandas==1.1.0",
    "hatchling==1.27.0",
    "matplotlib==3.8.4",
    "mypy==1.13.0",
    "pip-tools==7.4.1",
    "types-requests==2.31.0.20240406",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["brdr"]

[tool.black]
target-version = ['py310', 'py311', 'py312']

# Config for hatch environments
[tool.hatch.envs.dev]
features = [
    'dev',
]

# Config for hatch test
[tool.hatch.envs.hatch-test]
features = [
    'test',
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", '3.11', '3.12']
